* Improve Javadocs in the Bank class
* Make successfully refreshing a disabled bank re-enable it
* Östgötatrafiken: Update certificate
* Östgötatrafiken: Adapt to changed web page
* Skip Server Name Indication (SNI) when refreshing bank certificates to avoid certificate mismatches (bankdroid doesn't use SNI)
* Ticket Rikskortet: Adapt to changed web page

v1.9.10.8 (2016-09-29)
* Add a Volatile account to the Test Bank that always changes its balance.
* Fix widget not updating when the balance change was lower than the notification threshold.

v1.9.10.7 (2016-08-18)
* Update certificates for AmericanExpress and Coop

v1.9.10.6 (2016-08-01)
* Update outdated certificates
* Upgrade to android-build-tools v.24
* Upgrade to gradle 2.14

v1.9.10.5 (2016-04-03)
* Fix for OKQ8
* Update certificates for AmericanExpress, DankeBank, FirstCard, Rikslunchen and SveaDirekt.

v1.9.10.4 (2016-02-25)
* Removes support for EspressoHouse
* Adds support Högskolerestaurangers kund-/studentkort
* Update certificates for American Express, Marginalen, PayPal, Ticket Rikskortet, Zidisha, Östgötatrafiken

v1.9.10.3 (2015-12-24)
* Fix for Länsförsäkringar

v1.9.10.2 (2015-12-22)
* Fixes for Coop login.
* Removes support for Forex Bank due to BankId requirement.
* Fixes for MinPension login.
* Update certificates for Coop, ICA, Osuuspankki, PlusGirot, SevenDay, Meniga & Steam.
* Fixes for Bredband2.
* Added support for Android 6.0 Marshmallow.

v1.9.10.1 (2015-11-22)
* Update certificate for ICA.
* Fixes bug where banks without password could not be added.

v1.9.10.0 (2015-11-06)
* Removes support for PayPal due to complex web-login.
* Removes support for Swedbank, Sparbankerna, Marginalen and NordeaDK due to BankId requirement.
* Updates certificates for Bredband2, EasyCard, Nordea DK, Nordnet, Östgötatrafiken, Osuuspankki, PayPal, Villabanken
* Adds support for custom properties for bank implementations.

v1.9.9.5 (2015-07-18)