@@ -8,6 +8,7 @@ v1.9.10.9
 * Östgötatrafiken: Adapt to changed web page
 * Skip Server Name Indication (SNI) when refreshing bank certificates to avoid certificate mismatches (bankdroid doesn't use SNI)
 * Ticket Rikskortet: Adapt to changed web page
+* Removes IcaBanken since they now require BankID
 
 v1.9.10.8 (2016-09-29)
 * Add a Volatile account to the Test Bank that always changes its balance.
